# encrypter

./: 113-BennyHill.mid  CHANGELOG.md  Cargo.toml  README.md  index.html  lalala1.mid  test_private.key.pem  test_public.key.pem
.github/workflows/: rust-check.yml  rust.yml
assets/: sw.js
src/: app.rs  encrypt.rs  folder.rs  i18n.rs  keys_management.rs  lib.rs  main.rs
tests/: test_db.rs  test_encryption.rs  test_folder.rs  test_keys_management.rs
